# onedown

./: Makefile.am  README.md  configure.ac  konkor.onedown.policy  onedown  shutdown-onedown
data/: Makefile.am  io.github.konkor.onedown.desktop
data/icons/: Makefile.am
data/themes/default/: gtk.css
packaging/: packaging.sh
packaging/debian/: changelog  control  copyright
